--- a/home.html
+++ b/home.html
@@ -16,7 +16,87 @@
       <h1>Poster Shop</h1>
     </nav>
     <main>
-      <div class="card">Card</div>
+      <div class="card">
+        <img src="./assets/char-1.png" alt="char" />
+        <h3>Astronaut</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          recusandae dolore magni nemo harum aspernatur delectus.
+        </p>
+        <button>Ok, take my money!</button>
+      </div>
+      <div class="card">
+        <img src="./assets/char-2.png" alt="char" />
+        <h3>Ninja</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          recusandae dolore magni nemo harum aspernatur delectus.
+        </p>
+        <button>Ok, take my money!</button>
+      </div>
+      <div class="card">
+        <img src="./assets/char-3.png" alt="char" />
+        <h3>Nerd</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          recusandae dolore magni nemo harum aspernatur delectus.
+        </p>
+        <button>Ok, take my money!</button>
+      </div>
+      <div class="card">
+        <img src="./assets/char-4.png" alt="char" />
+        <h3>Doctor</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          recusandae dolore magni nemo harum aspernatur delectus.
+        </p>
+        <button>Ok, take my money!</button>
+      </div>
+      <div class="card">
+        <img src="./assets/char-5.png" alt="char" />
+        <h3>Guitar Player</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          recusandae dolore magni nemo harum aspernatur delectus.
+        </p>
+        <button>Ok, take my money!</button>
+      </div>
+      <div class="card">
+        <img src="./assets/char-6.png" alt="char" />
+        <h3>Snorkel</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          recusandae dolore magni nemo harum aspernatur delectus.
+        </p>
+        <button>Ok, take my money!</button>
+      </div>
+      <div class="card">
+        <img src="./assets/char-7.png" alt="char" />
+        <h3>Clown</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          recusandae dolore magni nemo harum aspernatur delectus.
+        </p>
+        <button>Ok, take my money!</button>
+      </div>
+      <div class="card">
+        <img src="./assets/char-8.png" alt="char" />
+        <h3>Police</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          recusandae dolore magni nemo harum aspernatur delectus.
+        </p>
+        <button>Ok, take my money!</button>
+      </div>
+      <div class="card">
+        <img src="./assets/char-9.png" alt="char" />
+        <h3>Fary</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          recusandae dolore magni nemo harum aspernatur delectus.
+        </p>
+        <button>Ok, take my money!</button>
+      </div>
     </main>
   </body>
 </html>
