--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="home.css" />
+    <link rel="stylesheet" href="checkout.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
@@ -45,24 +45,6 @@
       </div>
       <div class="card">
         <img src="./assets/char-4.png" alt="char" />
-        <h3>Doctor</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-          recusandae dolore magni nemo harum aspernatur delectus.
-        </p>
-        <button>Ok, take my money!</button>
-      </div>
-      <div class="card">
-        <img src="./assets/char-5.png" alt="char" />
-        <h3>Guitar Player</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-          recusandae dolore magni nemo harum aspernatur delectus.
-        </p>
-        <button>Ok, take my money!</button>
-      </div>
-      <div class="card">
-        <img src="./assets/char-6.png" alt="char" />
         <h3>Snorkel</h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
@@ -71,7 +53,7 @@
         <button>Ok, take my money!</button>
       </div>
       <div class="card">
-        <img src="./assets/char-7.png" alt="char" />
+        <img src="./assets/char-5.png" alt="char" />
         <h3>Clown</h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
@@ -80,7 +62,7 @@
         <button>Ok, take my money!</button>
       </div>
       <div class="card">
-        <img src="./assets/char-8.png" alt="char" />
+        <img src="./assets/char-6.png" alt="char" />
         <h3>Police</h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
@@ -89,7 +71,16 @@
         <button>Ok, take my money!</button>
       </div>
       <div class="card">
-        <img src="./assets/char-9.png" alt="char" />
+        <img src="./assets/char-7.png" alt="char" />
+        <h3>Tourist</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          recusandae dolore magni nemo harum aspernatur delectus.
+        </p>
+        <button>Ok, take my money!</button>
+      </div>
+      <div class="card">
+        <img src="./assets/char-8.png" alt="char" />
         <h3>Fary</h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
@@ -97,6 +88,53 @@
         </p>
         <button>Ok, take my money!</button>
       </div>
+      <div class="card">
+        <img src="./assets/char-9.png" alt="char" />
+        <h3>Coach</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          recusandae dolore magni nemo harum aspernatur delectus.
+        </p>
+        <button>Ok, take my money!</button>
+      </div>
+      <div class="card big_card">
+        <img src="./assets/char-10.png" alt="char" />
+        <h3>Cooker</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          recusandae dolore magni nemo harum aspernatur delectus.
+        </p>
+        <button>Ok, take my money!</button>
+      </div>
+      <div class="card big_card">
+        <img src="./assets/char-11.png" alt="char" />
+        <h3>Female Doctor</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          recusandae dolore magni nemo harum aspernatur delectus.
+        </p>
+        <button>Ok, take my money!</button>
+      </div>
     </main>
+    <footer>
+      <div>
+        <h3>Nav</h3>
+        <p>Products</p>
+        <p>About Us</p>
+        <p>Contact</p>
+      </div>
+      <div>
+        <h3>Address</h3>
+        <p>Somethinggatan 32</p>
+        <p>888 81 Someplace</p>
+      </div>
+      <div>
+        <h3>Social Media</h3>
+        <img src="./assets/logo-twitter.svg" alt="twitter" />
+        <img src="./assets/logo-facebook.svg" alt="facebook" />
+        <img src="./assets/logo-linkedin.svg" alt="linkedin" />
+        <img src="./assets/logo-instagram.svg" alt="instagram" />
+      </div>
+    </footer>
   </body>
 </html>
