--- a/checkout.html
+++ b/checkout.html
@@ -17,15 +17,17 @@
     </nav>
     <main>
       <h2 class="items">Items</h2>
-      <div class="card big_card">
-        <img src="./assets/char-10.png" alt="char" />
-        <h3>Cooker</h3>
-        <button>Ok, take my money!</button>
-      </div>
-      <div class="card big_card">
-        <img src="./assets/char-11.png" alt="char" />
-        <h3>Female Doctor</h3>
-        <button>Ok, take my money!</button>
+      <div class="container_card">
+        <div class="card big_card">
+          <img src="./assets/char-10.png" alt="char" />
+          <h3>Cooker</h3>
+          <button>Ok, take my money!</button>
+        </div>
+        <div class="card big_card">
+          <img src="./assets/char-11.png" alt="char" />
+          <h3>Female Doctor</h3>
+          <button>Ok, take my money!</button>
+        </div>
       </div>
     </main>
     <footer>
