--- a/checkout.html
+++ b/checkout.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="home.css" />
+    <link rel="stylesheet" href="checkout.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
@@ -16,16 +16,42 @@
       <h1>Checkout</h1>
     </nav>
     <main>
-      <div class="card big_card">
-        <img src="./assets/char-10.png" alt="char" />
-        <h3>Cooker</h3>
-        <button>Ok, take my money!</button>
-      </div>
-      <div class="card big_card">
-        <img src="./assets/char-11.png" alt="char" />
-        <h3>Female Doctor</h3>
-        <button>Ok, take my money!</button>
-      </div>
+      <h3>Items</h3>
+      <section class="card_container">
+        <div class="card big_card">
+          <img src="./assets/char-10.png" alt="char" />
+          <h3>Cooker</h3>
+          <button>Remove from shopping cart</button>
+        </div>
+        <div class="card big_card">
+          <img src="./assets/char-11.png" alt="char" />
+          <h3>Female Doctor</h3>
+          <button>Remove from shopping cart</button>
+        </div>
+      </section>
+      <table>
+        <tr>
+          <th>Item</th>
+          <th>Qnt</th>
+          <th>Price</th>
+        </tr>
+        <tr>
+          <td>Poster Cooker</td>
+          <td>1</td>
+          <td>179 sek</td>
+        </tr>
+        <tr>
+          <td>Poster Female Doctor</td>
+          <td>1</td>
+          <td>179 sek</td>
+        </tr>
+        <tr>
+          <td>Total</td>
+          <td></td>
+          <td>358 sek</td>
+        </tr>
+      </table>
+      <button>Gimmie gimmie gimmie!</button>
     </main>
     <footer>
       <div>
