--- a/checkout.html
+++ b/checkout.html
@@ -33,22 +33,22 @@
         <tr>
           <th>Item</th>
           <th>Qnt</th>
-          <th>Price</th>
+          <th class="table_end">Price</th>
         </tr>
         <tr>
           <td>Poster Cooker</td>
           <td>1</td>
-          <td>179 sek</td>
+          <td class="table_end">179 sek</td>
         </tr>
         <tr>
           <td>Poster Female Doctor</td>
           <td>1</td>
-          <td>179 sek</td>
+          <td class="table_end">179 sek</td>
         </tr>
-        <tr>
+        <tr class="table_total">
           <td>Total</td>
           <td></td>
-          <td>358 sek</td>
+          <td class="table_end">358 sek</td>
         </tr>
       </table>
       <button>Gimmie gimmie gimmie!</button>
